--- a/findme/index.html
+++ b/findme/index.html
@@ -11,49 +11,124 @@
 		<meta property="og:description" content="This is a very cool website of mine 🐿️">
 		<meta property="og:image" content="meta_img.svg">
 		<meta property="og:image:type" content="image/svg+xml">
-		<meta property="og:image:width" content="1278">
-		<meta property="og:image:height" content="666">
+		<meta property="og:image:width" content="1200">
+		<meta property="og:image:height" content="630">
 		<meta property="og:image:alt" content="Cool and simple sketch of myself">
-		<link rel="icon" type="image/svg+xml" href="favicon.svg">
+		<link rel="icon" type="image/svg+xml" href="../favicon.svg">
 		<title>Just Find Me</title>
-        <link rel="stylesheet" href="/assets/findme.fe570ca6.css" />
-        <link rel="stylesheet" href="/assets/findme.f68c393a.css" />
-    </head>
+	<link rel="stylesheet" href="/assets/findme.ae6236aa.css" />
+<link rel="stylesheet" href="/assets/findme.32c0f03d.css" /></head>
 	<body>
-            <div class="body">
-                <input type="checkbox" name="nmswitch" id="nmswitch">
-                <div class="content">
-                    <aside class="astro-DSMWFQCK" style="--LINKS: 2;">
-                        <input type="checkbox" name="burgr" id="burgr" class="astro-DSMWFQCK">
-                        <div class="burgr astro-DSMWFQCK">
-                            <svg class="burgr-line astro-DSMWFQCK" width="20" height="2" viewBox="0 0 20 2" xmlns="http://www.w3.org/2000/svg">
-                                <path id="rect1203" style="fill:var(--svg-fill);fill-opacity:1;stroke:none;" d="m 1,0 h 17.999999 a 1,1 45 0 1 1,1 1,1 135 0 1 -1,1 H 1 A 1,1 45 0 1 0,1 1,1 135 0 1 1,0 Z" class="astro-DSMWFQCK"></path>
-                            </svg>
-                            <svg class="burgr-line astro-DSMWFQCK" width="20" height="2" viewBox="0 0 20 2" xmlns="http://www.w3.org/2000/svg">
-                                <path id="rect1203" style="fill:var(--svg-fill);fill-opacity:1;stroke:none;" d="m 1,0 h 17.999999 a 1,1 45 0 1 1,1 1,1 135 0 1 -1,1 H 1 A 1,1 45 0 1 0,1 1,1 135 0 1 1,0 Z" class="astro-DSMWFQCK"></path>
-                            </svg>
-                            <svg class="burgr-line astro-DSMWFQCK" width="20" height="2" viewBox="0 0 20 2" xmlns="http://www.w3.org/2000/svg">
-                                <path id="rect1203" style="fill:var(--svg-fill);fill-opacity:1;stroke:none;" d="m 1,0 h 17.999999 a 1,1 45 0 1 1,1 1,1 135 0 1 -1,1 H 1 A 1,1 45 0 1 0,1 1,1 135 0 1 1,0 Z" class="astro-DSMWFQCK"></path>
-                            </svg>
-                        </div>
-                        <nav class="astro-DSMWFQCK">
-                            <a href="/" class="home astro-DSMWFQCK">
-                                <svg viewBox="0 0 24 24" class="astro-DSMWFQCK">
-                                    <path d="m 5.5117887,12.114407 v 6.887828 c 0,1.104569 0.8954305,2.000248 1.9999999,2.000464 4.2531934,8.35e-4 5.2733004,-1.16e-4 8.9811394,-3.93e-4 1.102004,-8.2e-5 1.995354,-0.895502 1.995354,-2.000071 v -6.887828 m 2.780676,0 -7.909256,-8.5320708 a 1.8540063,1.8540063 6.1637773e-7 0 0 -2.719334,0 L 2.7311116,12.114407" style="fill:none;fill-opacity:1;fill-rule:evenodd;stroke:var(--svg-fill);stroke-width:2;stroke-dasharray:none;stroke-opacity:1;image-rendering:optimizeQuality;shape-rendering:geometricPrecision;text-rendering:geometricPrecision" id="path4" inkscape:original-d="m 5.5117887,12.114407 v 8.887828 c 6.8585443,0.0018 6.8540723,0 12.9764933,0 v -8.887828 m 2.780676,0 -9.268923,-9.9988042 -9.2689234,9.9988042" inkscape:path-effect="#path-effect3900" class="astro-DSMWFQCK"></path>
-                                    <path style="opacity:1;fill:none;stroke:var(--svg-fill);stroke-width:2;stroke-dasharray:none" d="m 18.5,3.853 v 5.3 z" id="path3205" class="astro-DSMWFQCK"></path>
-                                </svg>
-                            </a>
-                            <a href="/findme/" class="find-me astro-DSMWFQCK">
-                                <svg class="rotate-chain astro-DSMWFQCK" viewBox="0 0 24 24">
-                                    <path d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z" id="path2" style="fill:var(--svg-fill);fill-opacity:1;stroke:none;" class="astro-DSMWFQCK"></path>
-                                </svg>
-                            </a>
-                        </nav>
-                    </aside>
-                <main class="astro-MOHFHPLZ">
-                    <p class="astro-MOHFHPLZ">WIP</p>
-                </main>
-            </div>
+		<div class="body">
+			<input type="checkbox" name="nmswitch" id="nmswitch">
+			<div class="content">
+				<aside class="astro-DSMWFQCK" style="--LINKS: 2;">
+    <input type="checkbox" name="burgr" id="burgr" class="astro-DSMWFQCK">
+    <div class="burgr astro-DSMWFQCK">
+        <svg class="burgr-line astro-DSMWFQCK" width="20" height="2" viewBox="0 0 20 2" xmlns="http://www.w3.org/2000/svg">
+            <path id="rect1203" style="fill:var(--svg-fill);fill-opacity:1;stroke:none;" d="m 1,0 h 17.999999 a 1,1 45 0 1 1,1 1,1 135 0 1 -1,1 H 1 A 1,1 45 0 1 0,1 1,1 135 0 1 1,0 Z" class="astro-DSMWFQCK"></path>
+        </svg>
+        <svg class="burgr-line astro-DSMWFQCK" width="20" height="2" viewBox="0 0 20 2" xmlns="http://www.w3.org/2000/svg">
+            <path id="rect1203" style="fill:var(--svg-fill);fill-opacity:1;stroke:none;" d="m 1,0 h 17.999999 a 1,1 45 0 1 1,1 1,1 135 0 1 -1,1 H 1 A 1,1 45 0 1 0,1 1,1 135 0 1 1,0 Z" class="astro-DSMWFQCK"></path>
+        </svg>
+        <svg class="burgr-line astro-DSMWFQCK" width="20" height="2" viewBox="0 0 20 2" xmlns="http://www.w3.org/2000/svg">
+            <path id="rect1203" style="fill:var(--svg-fill);fill-opacity:1;stroke:none;" d="m 1,0 h 17.999999 a 1,1 45 0 1 1,1 1,1 135 0 1 -1,1 H 1 A 1,1 45 0 1 0,1 1,1 135 0 1 1,0 Z" class="astro-DSMWFQCK"></path>
+        </svg>
+    </div>
+    <nav class="astro-DSMWFQCK">
+        <a href="/" class="home astro-DSMWFQCK">
+            <svg viewBox="0 0 24 24" class="astro-DSMWFQCK">
+                <path d="m 5.5117887,12.114407 v 6.887828 c 0,1.104569 0.8954305,2.000248 1.9999999,2.000464 4.2531934,8.35e-4 5.2733004,-1.16e-4 8.9811394,-3.93e-4 1.102004,-8.2e-5 1.995354,-0.895502 1.995354,-2.000071 v -6.887828 m 2.780676,0 -7.909256,-8.5320708 a 1.8540063,1.8540063 6.1637773e-7 0 0 -2.719334,0 L 2.7311116,12.114407" style="fill:none;fill-opacity:1;fill-rule:evenodd;stroke:var(--svg-fill);stroke-width:2;stroke-dasharray:none;stroke-opacity:1;image-rendering:optimizeQuality;shape-rendering:geometricPrecision;text-rendering:geometricPrecision" id="path4" inkscape:original-d="m 5.5117887,12.114407 v 8.887828 c 6.8585443,0.0018 6.8540723,0 12.9764933,0 v -8.887828 m 2.780676,0 -9.268923,-9.9988042 -9.2689234,9.9988042" inkscape:path-effect="#path-effect3900" class="astro-DSMWFQCK"></path>
+                <path style="opacity:1;fill:none;stroke:var(--svg-fill);stroke-width:2;stroke-dasharray:none" d="m 18.5,3.853 v 5.3 z" id="path3205" class="astro-DSMWFQCK"></path>
+            </svg>
+        </a>
+        <a href="/findme/" class="find-me astro-DSMWFQCK">
+            <svg class="rotate-chain astro-DSMWFQCK" viewBox="0 0 24 24">
+                <path d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z" id="path2" style="fill:var(--svg-fill);fill-opacity:1;stroke:none;" class="astro-DSMWFQCK"></path>
+            </svg>
+        </a>
+    </nav>
+</aside>
+
+				<main class="astro-JKTNV4YY">
+            <h1 class="astro-JKTNV4YY">You can find my online presence there and contact me</h1>
+            <p class="astro-JKTNV4YY">(although please don't do this unless you <span class="italic astro-JKTNV4YY">really</span> have to)</p>
+            <div class="ref-cards astro-JKTNV4YY">
+                <div class="card session astro-AG726GBO">
+    <div class="row-header astro-AG726GBO">
+        <img src="../session_logo.svg" alt="Sessionlogo" class="astro-AG726GBO">
+        <p class="name astro-AG726GBO">Session</p>
+        <div class="window-btns astro-AG726GBO">
+            <svg class="minimize astro-AG726GBO" width="10" height="10" viewBox="0 0 2.6458333 2.6458333" version="1.1" id="svg5" xmlns="http://www.w3.org/2000/svg">
+                <path class="window-btn-style astro-AG726GBO" style="fill:#000000;fill-opacity:1;stroke:none;stroke-width:0.264334;stroke-dasharray:none;stroke-opacity:1" d="M 0.26458333,0.79394666 1.3226652,1.8520833 2.38125,0.79375 2.1156456,0.79380458 1.3216034,1.5867957 0.52773036,0.7942694 Z" id="path4612"></path>
+            </svg>
+            <svg class="resize astro-AG726GBO" width="10" height="10" viewBox="0 0 2.6458333 2.6458333" version="1.1" id="svg5" xmlns="http://www.w3.org/2000/svg">
+                <rect class="window-btn-style astro-AG726GBO" style="fill:none;fill-opacity:1;stroke:#000000;stroke-width:0.264553;stroke-dasharray:none;stroke-opacity:1" id="rect6820" width="1.8521134" height="1.8521137" x="0.39685982" y="0.39685982"></rect>
+            </svg>
+            <svg class="close astro-AG726GBO" width="10" height="10" viewBox="0 0 2.6458333 2.6458333" version="1.1" id="svg5" xmlns="http://www.w3.org/2000/svg">
+                <path class="window-btn-style astro-AG726GBO" id="path10578-7" style="fill:none;fill-opacity:1;stroke:#000000;stroke-width:0.264572;stroke-dasharray:none;stroke-opacity:1" d="M 0.35806896,2.2877672 2.2877728,0.35817836 Z M 0.35812644,0.35812087 2.2877153,2.2878247 Z"></path>
+            </svg>
         </div>
-    </body>
-</html>
+    </div>
+    <div class="row-body astro-AG726GBO">
+        <p class="usr astro-AG726GBO">053a6556ad9f745007373f9caa149601e4bc29a018afd755bbd46f2ca800badc52</p>
+        <p class="comt astro-AG726GBO">
+            Session ID of mine.<span class="astro-AG726GBO">It might be hard to read, but still can be copied and doesn&#39;t overflow 😉</span>
+        </p>
+    </div>
+</div>
+
+                <div class="card e-mail astro-AG726GBO">
+    <div class="row-header astro-AG726GBO">
+        <img src="../email.svg" alt="E-maillogo" class="astro-AG726GBO">
+        <p class="name astro-AG726GBO">E-mail</p>
+        <div class="window-btns astro-AG726GBO">
+            <svg class="minimize astro-AG726GBO" width="10" height="10" viewBox="0 0 2.6458333 2.6458333" version="1.1" id="svg5" xmlns="http://www.w3.org/2000/svg">
+                <path class="window-btn-style astro-AG726GBO" style="fill:#000000;fill-opacity:1;stroke:none;stroke-width:0.264334;stroke-dasharray:none;stroke-opacity:1" d="M 0.26458333,0.79394666 1.3226652,1.8520833 2.38125,0.79375 2.1156456,0.79380458 1.3216034,1.5867957 0.52773036,0.7942694 Z" id="path4612"></path>
+            </svg>
+            <svg class="resize astro-AG726GBO" width="10" height="10" viewBox="0 0 2.6458333 2.6458333" version="1.1" id="svg5" xmlns="http://www.w3.org/2000/svg">
+                <rect class="window-btn-style astro-AG726GBO" style="fill:none;fill-opacity:1;stroke:#000000;stroke-width:0.264553;stroke-dasharray:none;stroke-opacity:1" id="rect6820" width="1.8521134" height="1.8521137" x="0.39685982" y="0.39685982"></rect>
+            </svg>
+            <svg class="close astro-AG726GBO" width="10" height="10" viewBox="0 0 2.6458333 2.6458333" version="1.1" id="svg5" xmlns="http://www.w3.org/2000/svg">
+                <path class="window-btn-style astro-AG726GBO" id="path10578-7" style="fill:none;fill-opacity:1;stroke:#000000;stroke-width:0.264572;stroke-dasharray:none;stroke-opacity:1" d="M 0.35806896,2.2877672 2.2877728,0.35817836 Z M 0.35812644,0.35812087 2.2877153,2.2878247 Z"></path>
+            </svg>
+        </div>
+    </div>
+    <div class="row-body astro-AG726GBO">
+        <p class="usr astro-AG726GBO">rafau@justr.me</p>
+        <p class="comt astro-AG726GBO">
+            My e-mail adress, I guess.
+        </p>
+    </div>
+</div>
+
+                <div class="card github astro-AG726GBO">
+    <div class="row-header astro-AG726GBO">
+        <img src="../github-mark.svg" alt="GitHublogo" class="astro-AG726GBO">
+        <p class="name astro-AG726GBO">GitHub</p>
+        <div class="window-btns astro-AG726GBO">
+            <svg class="minimize astro-AG726GBO" width="10" height="10" viewBox="0 0 2.6458333 2.6458333" version="1.1" id="svg5" xmlns="http://www.w3.org/2000/svg">
+                <path class="window-btn-style astro-AG726GBO" style="fill:#000000;fill-opacity:1;stroke:none;stroke-width:0.264334;stroke-dasharray:none;stroke-opacity:1" d="M 0.26458333,0.79394666 1.3226652,1.8520833 2.38125,0.79375 2.1156456,0.79380458 1.3216034,1.5867957 0.52773036,0.7942694 Z" id="path4612"></path>
+            </svg>
+            <svg class="resize astro-AG726GBO" width="10" height="10" viewBox="0 0 2.6458333 2.6458333" version="1.1" id="svg5" xmlns="http://www.w3.org/2000/svg">
+                <rect class="window-btn-style astro-AG726GBO" style="fill:none;fill-opacity:1;stroke:#000000;stroke-width:0.264553;stroke-dasharray:none;stroke-opacity:1" id="rect6820" width="1.8521134" height="1.8521137" x="0.39685982" y="0.39685982"></rect>
+            </svg>
+            <svg class="close astro-AG726GBO" width="10" height="10" viewBox="0 0 2.6458333 2.6458333" version="1.1" id="svg5" xmlns="http://www.w3.org/2000/svg">
+                <path class="window-btn-style astro-AG726GBO" id="path10578-7" style="fill:none;fill-opacity:1;stroke:#000000;stroke-width:0.264572;stroke-dasharray:none;stroke-opacity:1" d="M 0.35806896,2.2877672 2.2877728,0.35817836 Z M 0.35812644,0.35812087 2.2877153,2.2878247 Z"></path>
+            </svg>
+        </div>
+    </div>
+    <div class="row-body astro-AG726GBO">
+        <a href="https://github.com/JstRafau" target="_blank" class="astro-AG726GBO"><p class="usr astro-AG726GBO">@jstrafau</p></a>
+        <p class="comt astro-AG726GBO">
+            There should be some code that was written by me.
+        </p>
+    </div>
+</div>
+
+            </div>
+        </main>
+			</div>
+		</div>
+	
+</body></html>
