--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 		<meta property="og:description" content="This is a very cool website of mine 🐿️">
 		<meta property="og:image" content="meta_img.svg">
 		<meta property="og:image:type" content="image/svg+xml">
-		<meta property="og:image:width" content="1278">
-		<meta property="og:image:height" content="666">
+		<meta property="og:image:width" content="1200">
+		<meta property="og:image:height" content="630">
 		<meta property="og:image:alt" content="Cool and simple sketch of myself">
-		<link rel="icon" type="image/svg+xml" href="favicon.svg">
+		<link rel="icon" type="image/svg+xml" href="../favicon.svg">
 		<title>JustWebsite</title>
-	<link rel="stylesheet" href="/assets/findme.fe570ca6.css" />
-<link rel="stylesheet" href="/assets/index.38df9dc7.css" /></head>
+	<link rel="stylesheet" href="/assets/findme.ae6236aa.css" />
+<link rel="stylesheet" href="/assets/index.6acd4664.css" /></head>
 	<body>
 		<div class="body">
 			<input type="checkbox" name="nmswitch" id="nmswitch">
@@ -59,6 +59,8 @@
 
 		</div>
 	</main><img src="../lil-me-up.svg" alt="this is me" class="astro-IDH2NPAZ">
+
+
 			</div>
 		</div>
 	
