--- a/404.html
+++ b/404.html
@@ -11,18 +11,18 @@
 		<meta property="og:description" content="This is a very cool website of mine 🐿️">
 		<meta property="og:image" content="meta_img.svg">
 		<meta property="og:image:type" content="image/svg+xml">
-		<meta property="og:image:width" content="1278">
-		<meta property="og:image:height" content="666">
+		<meta property="og:image:width" content="1200">
+		<meta property="og:image:height" content="630">
 		<meta property="og:image:alt" content="Cool and simple sketch of myself">
 		<link rel="icon" type="image/svg+xml" href="favicon.svg">
 		<title>Just Error 404</title>
-	<link rel="stylesheet" href="/assets/404.8be12e56.css" /></head>
+	<link rel="stylesheet" href="/assets/404.4e885c35.css" /></head>
     <body>
-        <div class="astro-UVODHFW6">
-        <h1 class="astro-UVODHFW6">DO NOT PANIC!!!</h1>
-        <p class="astro-UVODHFW6"><span class="error-code astro-UVODHFW6">ERROR 4<span class="zero astro-UVODHFW6">0</span><span class="four astro-UVODHFW6">4</span> <br class="astro-UVODHFW6"></span>WON'T HURT YOU,</p>
-        <p class="astro-UVODHFW6">IF YOU'LL REMAIN CALM.</p>
-        <a href="../" class="astro-UVODHFW6"><p class="astro-UVODHFW6">👉 TAKE ME TO THE HOME PAGE 👈</p></a>
+        <div class="astro-JE7EZVBY">
+        <h1 class="astro-JE7EZVBY">DO NOT PANIC!!!</h1>
+        <p class="astro-JE7EZVBY"><span class="error-code astro-JE7EZVBY">ERROR 404 <br class="astro-JE7EZVBY"></span>WON'T HURT YOU,</p>
+        <p class="astro-JE7EZVBY">IF YOU'LL REMAIN CALM.</p>
+        <a href="../" class="astro-JE7EZVBY"><p class="astro-JE7EZVBY">👉 TAKE ME TO THE HOME PAGE 👈</p></a>
     </div>
     
 </body></html>
