--- a/findme/index.html
+++ b/findme/index.html
@@ -95,7 +95,7 @@
         </div>
     </div>
     <div class="row-body astro-AG726GBO">
-        <p class="usr astro-AG726GBO">rafau@justr.me</p>
+        <p class="usr astro-AG726GBO">r@rafau.pl</p>
         <p class="comt astro-AG726GBO">
             My e-mail adress, I guess.
         </p>
