--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </head>
     <body>
         <script>
-            //window.location.replace("https://old.rafau.pl");
+            window.location.replace("https://old.rafau.pl");
         </script>
         <div class="hoafoonyd">
             <p class="wip">WIP</p>
